Canonicalize deterministic population evidence